Fixed layout bug on mobile related to menu position

--- a/GuildWarsPartySearch.NodeJSServer/index.scss
+++ b/GuildWarsPartySearch.NodeJSServer/index.scss
@@ -75,19 +75,27 @@ body {
     text-align: left;
     background: rgba(0, 0, 0, 0.90);
     opacity: 1;
-    transition: right 0.3s, opacity 0.3s;
+    transition: width .3s, opacity 0.3s;
     border-left: solid 1px #808080;
     box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.9);
     color: #ffffff;
     overflow-y: auto;
+    overflow-x:hidden;
     display: flex;
     flex-direction: column;
+    .menuInner {
+        position:relative;
+        width:300px;
+        height:100%;
+        flex-direction: column;
+        display:flex;
+    }
     a {
         color: #ffffff;
         text-decoration: none;
     }
     &.hidden {
-        right: -300px;
+        width:0px;
         opacity: 0;
         pointer-events: none;
     }
